--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@angular/ssr": "^19.0.6",
     "@ng-select/ng-select": "^14.1.0",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
+    "mongoose-unique-validator": "^5.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.10",
