--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "prj-sktpj": {
+    "prjSktpjs": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/prj-sktpj",
+            "outputPath": "dist/prj-sktpjs",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -39,12 +39,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -63,7 +58,6 @@
               "outputHashing": "all"
             },
             "development": {
-              "aot": true,
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
@@ -75,10 +69,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "prj-sktpj:build:production"
+              "buildTarget": "prjSktpjs:build:production"
             },
             "development": {
-              "buildTarget": "prj-sktpj:build:development"
+              "buildTarget": "prjSktpjs:build:development"
             }
           },
           "defaultConfiguration": "development"
