--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "prj-sktpj",
+  "name": "prj-sktpjs",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:prj-sktpj": "node dist/prj-sktpj/server/server.mjs",
-    "open-app": "gulp open-app",
-    "compile-scss": "sass --style expanded --source-map --precision=6 assets/scss/material-dashboard.scss assets/css/material-dashboard.css --quiet"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -20,17 +17,10 @@
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@angular/ssr": "^19.0.6",
-    "@ng-select/ng-select": "^14.1.0",
+    "@ng-select/ng-select": "^14.2.0",
     "axios": "^1.7.9",
-    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.4",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.10",
@@ -38,21 +28,16 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
+    "@angular-devkit/build-angular": "^19.0.7",
+    "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "gulp": "5.0.0",
-    "gulp-open": "3.0.1",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "sass": "1.80.2",
     "typescript": "~5.6.2"
   }
 }
