--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "dist/my-angular-project/**/*",
+        "src": "dist/prj-sktpj/**/*",
         "use": "@vercel/static"
       }
     ],
